# shorten

./: Cargo.toml  Dockerfile  README.md  blacklist.txt  test.py
.github/workflows/: push.yml
.sqlx/: query-6a31f422e9951faf60b4871b5f8ecea0e4eece28bdc0a933b158aa25224deb59.json  query-b675723045d51824e1fbc3640b188bd4a7fd26bbb546caab3e982c5e87f7634a.json  query-bcadbb3942a9a3c163a893ff26e63a0c85134d410bf1544ed98091e71675ec33.json
lemp/: deploy.yml  service.yml
migrations/: 20231006102243_shorten.sql
src/: main.rs  utils.rs
