[package]
name = "shorten"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-web = "4.4.0"
anyhow = "1.0.75"
dotenv = "0.15.0"
rand = "0.8.5"
serde = "1.0.193"
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio"] }
url = "2.5.0"
